update name color

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header {
 .uthutho-text {
   font-size: 1.3rem;
   font-weight: 600;
-  color: var(--primary-color);
+  color: #1ea2b1;
 }
 
 .header-actions {
