--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 [data-theme="dark"] {
-  --primary-color: #5e97f6;
+  --primary-color: #1ea2b1;
   --secondary-color: #1e88e5;
   --accent-color: #82b1ff;
   --text-color: #e0e0e0;
@@ -442,6 +442,34 @@ footer {
   background-color: var(--primary-color);
   color: white;
 }
+/* profile modal */
+.profile-modal{
+  @extend .modal;
+}
+.profile-modal-content {
+  @extend .modal-content;
+  padding: 30px;
+}
+
+.profile-container {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: var(--card-bg);
+  border-radius: var(--radius-md);
+  box-shadow: var(--shadow-md);
+  position: relative;
+}
+
+.profile-container h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.close-profile-modal{
+  @extend .close-modal;
+}
 
 .confirm-btn {
   width: 100%;
@@ -452,6 +480,42 @@ footer {
   border-radius: var(--radius-sm);
   cursor: pointer;
   font-size: 0.95rem;
+}
+.map-container {
+  width: 100%;
+  height: 300px; /* Adjust the height as needed */
+  margin-bottom: 15px;
+  border-radius: var(--radius-md);
+  overflow: hidden;
+  box-shadow: var(--shadow-md);
+}
+
+.map-container iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+.cost-div,
+.time-div{
+  background-color: var(--primary-color);
+  color: white;
+  padding: 10px;
+  margin: 5px;
+  border-radius: var(--radius-sm);
+  display: flex;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  border-radius: var(--radius-sm);
+  cursor: pointer;
+  font-size: 0.95rem;
+}
+.uber-link{
+  background-color: var(--primary-color);
+  color: white;
+  text-decoration: none;
+  border-radius: var(--radius-sm);
+  padding: 10px;
 }
 
 /* User Controls */
